Add accounting for inflation and added balance Optional settings allow user to input inflation and added balance.

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,11 @@ h1 {
     font-style: Georgia, "Times New Roman";
 }
 
+.hidden {
+    display: none;
+}
+
+
 .calc-body {
     margin: 50px;
     padding: 50px;
